<resources>
    <string name="app_name">weather app 2</string>
    <string name="todo">TODO</string>
    <string name="City_name">Mianwali</string>
    <string name="current">Thunderstorm</string>
    <string name="textview">date</string>
    <string name="_50_xb0">40°</string>
    <string name="_18_xb0">18°</string>
    <string name="_25_xb0">25°</string>
    <string name="P_12_xb0">+12°</string>
    <string name="P_13_xb0">+13°</string>
    <string name="P_14_xb0">+14°</string>
    <string name="P_18_xb0">+18°</string>
    <string name="P_17_xb0">+17°</string>
    <string name="P_19_xb0">+19°</string>
    <string name="_131_km_h">131 Km/h</string>
    <string name="wind">Wind</string>
    <string name="Thunder">Thunder</string>
    <string name="rain_chances">70%</string>
    <string name="rain_desc">rain</string>
    <string name="hum">humidity</string>
    <string name="hum_chances">24%</string>
    <string name="today">TODAY</string>
    <string name="time2">11:00</string>
    <string name="time1">10:00</string>
    <string name="time3">12:00</string>
    <string name="time4">1:00</string>
    <string name="_19_xb0">19°</string>
    <string name="_22_xb0">22°</string>
    <string name="_21_xb0">21°</string>
    <string name="_23_xb0">23°</string>
    <string name="cloudy">aimg for showing current weather</string>
    <string name="_20_xb0">20°</string>
    <string name="tommorow">Tomorrow</string>
    <string name="tommorow_pred">Rainy-Cloudy</string>
    <string name="_9_km_h">9 Km/h</string>
    <string name="hum_chances2">31%</string>
    <string name="Mon">Mon</string>
    <string name="sun">Sun</string>
    <string name="storm">Storm</string>
    <string name="Rainy">Rainy</string>
    <string name="Sat">Sat</string>
    <string name="Fri">Fri</string>
    <string name="slow">Slow</string>
    <string name="Thu">Thu</string>
    <string name="Wed">Wed</string>
    <string name="The">The</string>
    <string name="img_btn">btn for checking next week</string>
    <string name="next">next 7 days</string>
</resources>